--- a/index.html
+++ b/index.html
@@ -3,295 +3,179 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Hub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>රත්නසාර විද්‍යාලයීය කළමනාකරණ පද්ධති</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        :root {
-            --primary-color: #3498db;
-            --secondary-color: #2ecc71;
-            --background-color: #f0f4f8;
-            --card-color: #ffffff;
-            --text-color: #2c3e50;
-        }
-
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Segoe UI', Arial, sans-serif;
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--background-color);
-            line-height: 1.6;
-            color: var(--text-color);
+            background: linear-gradient(45deg, #1a2a6c, #b21f1f, #fdbb2d);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+            min-height: 100vh;
+            padding: 2rem;
+            color: white;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
-            max-width: 1400px;
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 2rem;
         }
 
-        .header {
+        header {
             text-align: center;
             margin-bottom: 3rem;
-            padding-top: 4rem;
+            padding: 2rem;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
         }
 
-        .header h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            color: var(--text-color);
+        h1 {
+            font-size: 2.5rem;
             margin-bottom: 1rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
-        .header p {
-            color: #6c757d;
-            max-width: 700px;
-            margin: 0 auto;
-        }
-
-        .project-grid {
+        .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
         }
 
-        .project-card {
-            background-color: var(--card-color);
-            border-radius: 15px;
-            box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
-            padding: 2.5rem;
-            text-align: center;
+        .card {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            padding: 2rem;
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
-            cursor: pointer;
             position: relative;
             overflow: hidden;
         }
 
-        .project-card::before {
+        .card::before {
             content: '';
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
-            height: 5px;
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-            transform: scaleX(0);
-            transform-origin: left;
-            transition: transform 0.3s ease;
+            height: 100%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transform: translateX(-100%);
+            transition: 0.5s;
         }
 
-        .project-card:hover::before {
-            transform: scaleX(1);
+        .card:hover::before {
+            transform: translateX(100%);
         }
 
-        .project-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(50,50,93,.15), 0 10px 20px rgba(0,0,0,.1);
+        .card:hover {
+            transform: translateY(-10px) scale(1.02);
+            box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
         }
 
-        .project-card-icon {
-            width: 100px;
-            height: 100px;
-            margin: 0 auto 1.5rem;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
+        .card i {
             font-size: 3rem;
-            box-shadow: 0 10px 20px rgba(0,0,0,.1);
+            margin-bottom: 1.5rem;
+            color: rgba(255, 255, 255, 0.9);
         }
 
-        .project-card h2 {
+        .card h2 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
-            color: var(--text-color);
-            font-weight: 600;
+            color: white;
         }
 
-        .project-card p {
-            color: #6c757d;
+        .card p {
+            color: rgba(255, 255, 255, 0.8);
             margin-bottom: 1.5rem;
+            line-height: 1.6;
         }
 
-        .project-card .btn {
+        .btn {
             display: inline-block;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+            padding: 1rem 2rem;
+            background: rgba(255, 255, 255, 0.2);
             color: white;
-            padding: 0.75rem 1.5rem;
-            border-radius: 50px;
             text-decoration: none;
-            font-weight: 600;
-            transition: transform 0.3s ease;
+            border-radius: 30px;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
-        .project-card .btn:hover {
-            transform: scale(1.05);
+        .btn:hover {
+            background: rgba(255, 255, 255, 0.3);
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
-        /* Frame Styles */
-        #project-frame {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-            z-index: 1000;
-            display: none;
-        }
-
-        .back-btn {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 50px;
-            cursor: pointer;
-            z-index: 1100;
-            display: none;
-            box-shadow: 0 10px 20px rgba(0,0,0,.1);
-            transition: transform 0.3s ease;
-        }
-
-        .back-btn:hover {
-            transform: scale(1.05);
-        }
-
-        /* Loading Overlay */
-        .loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255,255,255,0.9);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            z-index: 2000;
-        }
-
-        .spinner {
-            width: 80px;
-            height: 80px;
-            border: 3px solid var(--primary-color);
-            border-radius: 50%;
-            border-top-color: var(--secondary-color);
-            animation: spin 1s ease-in-out infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Responsive Adjustments */
         @media (max-width: 768px) {
-            .header h1 {
-                font-size: 2rem;
+            body {
+                padding: 1rem;
             }
             
-            .project-grid {
-                grid-template-columns: 1fr;
+            header {
+                padding: 1.5rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            .card {
+                padding: 1.5rem;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>School Data base Hub</h1>
-            <p>මෙම School Data base Hubඑක මඟින් විවිධ project සඳහා පහසු සම්බන්ධතාවය සලසා දෙනු ලැබේ. පහළ project card පිටුවෙන් ඔබට අවශ්‍ය project එකට යා හැක.</p>
-        </div>
+        <header>
+            <h1>රත්නසාර විද්‍යාලයීය කළමනාකරණ පද්ධති</h1>
+        </header>
 
-        <div class="project-grid" id="project-grid">
-            <div class="project-card" onclick="openProject('library')">
-                <div class="project-card-icon">📚</div>
+        <div class="grid">
+            <div class="card">
+                <i class="fas fa-box"></i>
+                <h2>පාසල් ගබඩා කළමනාකරණය</h2>
+                <p>පාසල් ගබඩා භාණ්ඩ සහ තොග පාලනය කිරීමේ පද්ධතිය. භාණ්ඩ ලැබීම්, නිකුත් කිරීම් සහ තොග පාලනය.</p>
+                <a href="https://sajith22152.github.io/schoolstockrcb/" class="btn">පිවිසෙන්න</a>
+            </div>
+
+            <div class="card">
+                <i class="fas fa-book"></i>
                 <h2>පුස්තකාල කළමනාකරණය</h2>
-                <p>සම්පූර්ණ පුස්තකාල කළමනාකරණ පද්ධතිය සඳහා වූ නවීන විසඳුම</p>
-                <a href="#" class="btn">View Project</a>
+                <p>පාසල් පුස්තකාල පොත් හා සාමාජික තොරතුරු කළමනාකරණ පද්ධතිය. පොත් ලැයිස්තු, ණය දීම් සහ ආපසු භාර දීම්.</p>
+                <a href="https://sajith22152.github.io/librarymanagementrcb/" class="btn">පිවිසෙන්න</a>
             </div>
 
-            <div class="project-card" onclick="openProject('school')">
-                <div class="project-card-icon">🏫</div>
-                <h2>පාසල් තොග කළමනාකරණය</h2>
-                <p>පාසැල් සඳහා වූ නවීන තොග කළමනාකරණ පද්ධතිය</p>
-                <a href="#" class="btn">View Project</a>
+            <div class="card">
+                <i class="fas fa-user-graduate"></i>
+                <h2>සිසු කළමනාකරණය</h2>
+                <p>සිසු තොරතුරු සහ පාසල් දත්ත කළමනාකරණ පද්ධතිය. සිසු ලියාපදිංචිය, පැමිණීම සහ ප්‍රගති වාර්තා.</p>
+                <a href="https://sajith22152.github.io/rathanasara-_college_SMS/" class="btn">පිවිසෙන්න</a>
             </div>
 
-            <div class="project-card" onclick="openProject('college')">
-                <div class="project-card-icon">🎓</div>
-                <h2>විද්‍යාලය SMS</h2>
-                <p>පාසැල් සිසුන් සඳහා වූ සම්පූර්ණ කළමනාකරණ පද්ධතිය</p>
-                <a href="#" class="btn">View Project</a>
+            <div class="card">
+                <i class="fas fa-chalkboard-teacher"></i>
+                <h2>පන්ති කළමනාකරණය</h2>
+                <p>පන්ති සහ විෂය මාලා කළමනාකරණ පද්ධතිය. පන්ති කාලසටහන්, විෂය මාලා සහ ගුරු තොරතුරු.</p>
+                <a href="https://sajith22152.github.io/class/" class="btn">පිවිසෙන්න</a>
             </div>
         </div>
     </div>
-
-    <!-- Loading Overlay -->
-    <div class="loading-overlay" id="loading-overlay">
-        <div class="spinner"></div>
-    </div>
-
-    <!-- Back Button -->
-    <button class="back-btn" id="back-btn" onclick="closeProject()">ආපසු</button>
-
-    <!-- Project Frame -->
-    <iframe id="project-frame" src=""></iframe>
-
-    <script>
-        const projects = {
-            'library': 'https://sajith22152.github.io/librarymanagementrcb/',
-            'school': 'https://sajith22152.github.io/schoolstockrcb/',
-            'college': 'https://sajith22152.github.io/rathanasara-_college_SMS/'
-        };
-
-        function openProject(projectKey) {
-            const projectGrid = document.getElementById('project-grid');
-            const projectFrame = document.getElementById('project-frame');
-            const loadingOverlay = document.getElementById('loading-overlay');
-            const backBtn = document.getElementById('back-btn');
-
-            // Show loading overlay
-            loadingOverlay.style.display = 'flex';
-
-            // Hide project grid
-            projectGrid.style.display = 'none';
-
-            // Set iframe source
-            projectFrame.src = projects[projectKey];
-
-            // Show iframe when loaded
-            projectFrame.onload = function() {
-                projectFrame.style.display = 'block';
-                loadingOverlay.style.display = 'none';
-                backBtn.style.display = 'block';
-            };
-        }
-
-        function closeProject() {
-            const projectGrid = document.getElementById('project-grid');
-            const projectFrame = document.getElementById('project-frame');
-            const backBtn = document.getElementById('back-btn');
-
-            // Show project grid
-            projectGrid.style.display = 'grid';
-
-            // Hide iframe
-            projectFrame.style.display = 'none';
-            projectFrame.src = '';
-
-            // Hide back button
-            backBtn.style.display = 'none';
-        }
-    </script>
 </body>
 </html>
